# killing_me_softly_with_his_dsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
code/: .gitignore  CMakeLists.txt  README.md  TODO.md  aubio.cmake  changelog.txt  juce_shared_vst.cmake
code/analysis/: AudioAnalyser.cpp  AudioAnalyser.h
code/applications/: CMakeLists.txt
code/applications/assets/: breakbeat_machine_ui.aseprite  breakbeat_machine_ui_draft_2.aseprite
code/applications/audio_decay/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
code/applications/breakbeat_machine/: BreakbeatAudioSource.cpp  BreakbeatAudioSource.h  BreakbeatMainWindow.h  BreakbeatMaker.cpp  BreakbeatMaker.h  BreakbeatWaveform.cpp  BreakbeatWaveform.h  CMakeLists.txt  FileRecorder.h  Main.cpp  ReferenceCountedForwardAndReverseBuffer.cpp  SampleManager.cpp  SampleManager.h  SliceExporter.cpp  SliceExporter.h  SliceManager.cpp  SliceManager.h
code/applications/delay/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
code/applications/doppler_shift/: CMakeLists.txt  DopplerShiftPlugin.cpp  DopplerShiftPlugin.h  DopplerShiftPluginEditor.h  RubberbandPitchShifter.cpp  RubberbandPitchShifter.h
code/applications/gpt_verb/: CMakeLists.txt  README.md  cids.h  controller.h  entry.cpp  processor.h  version.h
code/applications/granular/: CMakeLists.txt  Envelope.h  Grain.h  Main.cpp  MainComponent.cpp  MainComponent.h  Scheduler.h  SequenceStrategy.h  Waveform.cpp  Waveform.h
code/applications/matt_verb/: CMakeLists.txt  cids.h  controller.cpp  controller.h  delayline.cpp  entry.cpp  processor.cpp  processor.h  tuning.h  version.h
code/applications/offline/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
code/applications/pulsar/: Ball.cpp  Ball.h  CMakeLists.txt  NoteStrategy.cpp  NoteStrategy.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Polygon.cpp  Polygon.h  PulsarWorld.cpp  PulsarWorld.h  Utils.h
code/applications/real_time/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
code/applications/ruler_twang/: CMakeLists.txt  RulerTwangPlugin.cpp  RulerTwangPlugin.h  RulerTwangPluginEditor.cpp
code/applications/template/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
code/applications/ui_playground/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
code/core/: Allocators.h  CircularBuffer.h  MultitapCircularBuffer.h  ReferenceCountedBuffer.h  ReferenceCountedForwardAndReverseBuffer.cpp  ReferenceCountedForwardAndReverseBuffer.h  RingBuffer.h
code/dependencies/freeverb/: CMakeLists.txt  README.md  delayline.hpp  revmodel.cpp  revmodel.hpp
code/dependencies/rubberband/: CMakeLists.txt
code/distribution/: macos-dmg-config.json
code/dsp/: OfflineStretcher.cpp  OfflineStretcher.h
code/dsp/envelopes/: Envelope.cpp  Envelope.h
code/dsp/physical_modelling/: FreeVibrationalModes.cpp  FreeVibrationalModes.h  RulerVibrationalModes.cpp  RulerVibrationalModes.h
code/dsp/processors/: AudioDecayProcessor.cpp  AudioDecayProcessor.h  OfflineStretcher.cpp  OfflineStretcher.h  PitchDetectionProcessor.cpp  PitchDetectionProcessor.h  RealTimeStretchProcessor.cpp  RealTimeStretchProcessor.h  SimpleDelayProcessor.cpp  SimpleDelayProcessor.h  TemplateProcessor.cpp  TemplateProcessor.h
code/experiments/: .gitignore  README.md  bit_crush.py  decimate.py  filters.py  ixa_synth.py  mp3_ghosts.py  realtime_player.py  sound_player.py  sound_recorder.py  utils_functions.py  waveshaper.py
code/experiments/FM/: __init__.py  fm_synth.py  frequency_modulation.py
code/experiments/GUI/: fm_synth_gui.py  oscillator_gui.py
code/experiments/effects/: __init__.py  filter.py  sfx.py
code/experiments/filters/: __init__.py  bandpass.py  lowpass.py
code/experiments/image_manipulation/: .gitignore  README.md  __init__.py  changelog.txt  examples.py  instructions.txt  requirements.txt  soxmosh.py  soxmosh_cli.py
code/experiments/physical_modelling/: __init__.py  ruler_twang.py
code/experiments/plotting/: circular_buffer_test.py  multitapcircular_buffer.py  ruler_twang_anim.py  ruler_twang_plot.py  signals_test.py
code/experiments/prototyping/: clamped_bar_modes.pd  fm.pd  free_bar_modes.pd  its_gonna_rain.pd  modulated_free_bar_modes.pd  ruler_twang.pd  ruler_twang_clone.pd
code/experiments/spectral/: .gitignore  fft.py  input_spectrum_visualiser.py  specgram_plot.py  spectral_analysis.py
code/experiments/steganography/: .gitignore  changelog.txt  frequency_domain.py  frequency_domain_CLI.py  frequency_domain_GUI.py  frequency_modulation.py  instructions.txt  macos_package.sh  requirements.txt
code/experiments/synthesis/: __init__.py  chain.py  envelope.py  modulated_oscillator.py  oscillator.py  wave_adder.py
code/experiments/tests/: circular_buffer_test.py  test_utils_functions.py
code/playground/: CMakeLists.txt
code/playground/ara_juce_test_plugin/: ARAPluginDemo.h  CMakeLists.txt  main.cpp
code/playground/doppler/: CMakeLists.txt  main.cpp
code/playground/fft/: CLIMain.cpp  CMakeLists.txt  FFTWrapper.cpp  FFTWrapper.h  Main.cpp  MainComponent.cpp  MainComponent.h
code/playground/multitap_delay/: CMakeLists.txt  MultitapDelayPlugin.cpp  MultitapDelayPlugin.h
code/playground/pitch/: CMakelists.txt  PitchDetectionPlugin.cpp  PitchDetectionPlugin.h  PitchDetectionProcessor.cpp  PitchDetectionProcessor.h
code/playground/ruler_twang/: CMakeLists.txt  ClampedVibrationalModes.cpp  FreeVibrationalModes.h  (+7 more)
code/scripts/: generate_test_audio.sh  package_macos_artifacts.sh  package_ubuntu_artifacts.sh  vst3_validator_tests.sh
code/source/: VectorOps.h
code/ui/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  MainWindow.h  PixelArtLookAndFeel.cpp  PixelArtLookAndFeel.h  Ruler.cpp  Ruler.h  Waveform.cpp  Waveform.h  WaveformAndRuler.cpp  WaveformAndRuler.h
code/ui_project_files/: combobox.aseprite  down_arrow_button.aseprite  pause_button.aseprite  play_button.aseprite  record_button.aseprite  rotary_knob.aseprite  sync_button.aseprite  up_arrow_button.aseprite
code/utils/: FileRecorder.cpp  FileRecorder.h
(+44 files in other folders)
