
add_subdirectory(template)
add_subdirectory(real_time)
add_subdirectory(offline)
add_subdirectory(delay)
add_subdirectory(breakbeat_machine)
add_subdirectory(audio_decay)
add_subdirectory(granular)
add_subdirectory(pulsar)
add_subdirectory(doppler_shift)
add_subdirectory(matt_verb)
add_subdirectory(gpt_verb)
add_subdirectory(ui_playground)
